# hddb

./: .gitignore  README.md  lexer.py  migen_parser.py  parser.py  readme.md  symbol_table.txt  test.v
debugger/: Cargo.toml
debugger/src/: main.rs
examples/blink/: README.md  blinker.py
examples/vpu/: README.md  vpu.py
examples/vpu/driver/: Cargo.toml
examples/vpu/driver/src/: main.rs
hardware/: Makefile
hardware/modules/: csr_cdc.py
hardware/src/: usb.py
litex/: blackbox_debug.py  blinker.py  debug_core.py  gsd_orangecrab.rpt  test_gen.py  usb.py  usb_dram.py  vp.py  works_nocpu.py
migen/: example.py
rtl/: flashtest_top.v
software/: compile.py  compiler.py
wishbone_test/: Cargo.toml
wishbone_test/src/: main.rs
